src/test/deca/context/valid/types_compatibles.deca
// Description :
// test de l'affectation de types différents compatibles
//
// Résultats :
// ok

{
  float f;
  f = 5;
}
